--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
     container: python3.9-slim
     steps:
       - name: checkout
-        uses: actions/checkout@v
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: |
          python -m pip install --upgrade pip
